Add logo to index page

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,19 @@
     <title>Mojitoo Creative Media</title>
   </head>
   <body>
-    <div class="h-2 bg-gradient-to-r from-teal-400 to-blue-500"></div>
+    <div
+      class="
+        absolute
+        top-0
+        left-0
+        right-0
+        h-2
+        w-auto
+        bg-gradient-to-r
+        from-teal-400
+        to-blue-500
+      "
+    ></div>
     <div class="h-screen bg-gray-200 flex justify-center flex-col">
       <div
         class="
